--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -12,3 +12,10 @@
     width: 100vw;
     height: 100vh;
 }
+
+.midlineClass{
+    margin: auto;
+    width: 1px;
+    height: 100%;
+    background-color: white;
+}
